Deleitate con esta obra de arte Fer

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,7 @@
       <div class="header-tittle-container">
          <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
          <div>
-            <p class="header-tittle">Franco's Petshop</p>
-            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+            <p class="header-tittle">Contact</p>
          </div>
       </div>
    </header>
@@ -93,10 +92,6 @@
 
    <footer class="footer">
       <div class="footer-main">
-         <!-- 
-         <div class="flecha-icon-container">
-            <img src="./img/flecha-arriba.png" class="flecha-icon" alt="">
-         </div> -->
 
          <div class="socialMedia-container">
             <div>
@@ -127,7 +122,6 @@
    </footer>
 
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-   <!-- <script src="sweetalert2.all.min.js"></script> -->
    <script src="./scripts/main.js"></script>
 </body>
 
