LA PUSHEADA DE JOSU

--- a/playground/index.html
+++ b/playground/index.html
@@ -10,13 +10,22 @@
 </head>
 
 <body>
-   <div>
-      <button class="play-button" id="playButton">Play</button>
-      <a href="#" id="clickMe">Click Me! </a>
-      <div class="score" id="score"> Score: 0</div>
-   </div>
-   <p class="remaining-time" id="time">Time: 10s</p>
+   <div class="container">
+      <section class="left" id="leftSection">
+         <h1>Viven en Monte</h1>
+         <!-- <p class="familiar">Gordos Gordos</p>
+         <p class="familiar">MatuMoto</p>
+         <p class="familiar">Santy</p>
+         <p class="familiar">Josu</p>
+         <p class="familiar">Ema</p>
+         <p class="familiar">Mami</p>
+         <p class="familiar">Papi</p> -->
+      </section>
 
+      <section class="right" id="rightSection">
+         <h1>Viven en otro lado</h1>
+      </section>
+   </div>
 
    <script src="./main.js"></script>
 </body>
